grammar.js
// @generated by Peggy 4.0.3.
//
// https://peggyjs.org/
import Declaration from "./statement/declaration.js";
import Arithmetic from "./statement/arithmetic.js";
import Logical from "./statement/logical.js";
import Relational from "./statement/relational.js";
import Condition from "./statement/condition.js";
import Switch from "./statement/switch.js";
import Literal from "./statement/literal.js";
import Type from "./statement/type.js";
import Print from "./statement/print.js";
import Assign from "./statement/assign.js"


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "System.out.println(";
  var peg$c1 = ");";
  var peg$c2 = "if";
  var peg$c3 = "(";
  var peg$c4 = ")";
  var peg$c5 = "else";
  var peg$c6 = "switch";
  var peg$c7 = "{";
  var peg$c8 = "}";
  var peg$c9 = "case";
  var peg$c10 = ":";
  var peg$c11 = "default";
  var peg$c12 = "while";
  var peg$c13 = ";";
  var peg$c14 = "++";
  var peg$c15 = "[]";
  var peg$c16 = "=";
  var peg$c17 = ",";
  var peg$c18 = "&&";
  var peg$c19 = "||";
  var peg$c20 = ">";
  var peg$c21 = ">=";
  var peg$c22 = "<=";
  var peg$c23 = "==";
  var peg$c24 = "!=";
  var peg$c25 = "<";
  var peg$c26 = "+";
  var peg$c27 = "-";
  var peg$c28 = "*";
  var peg$c29 = "/";
  var peg$c30 = "int";
  var peg$c31 = "float";
  var peg$c32 = "string";
  var peg$c33 = "boolean";
  var peg$c34 = "char";
  var peg$c35 = "var";
  var peg$c36 = "\"";

  var peg$r0 = /^[a-zA-Z_]/;
  var peg$r1 = /^[a-zA-Z0-9_]/;
  var peg$r2 = /^[0-9]/;
  var peg$r3 = /^[^"]/;
  var peg$r4 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation("System.out.println(", false);
  var peg$e1 = peg$literalExpectation(");", false);
  var peg$e2 = peg$literalExpectation("if", false);
  var peg$e3 = peg$literalExpectation("(", false);
  var peg$e4 = peg$literalExpectation(")", false);
  var peg$e5 = peg$literalExpectation("else", false);
  var peg$e6 = peg$literalExpectation("switch", false);
  var peg$e7 = peg$literalExpectation("{", false);
  var peg$e8 = peg$literalExpectation("}", false);
  var peg$e9 = peg$literalExpectation("case", false);
  var peg$e10 = peg$literalExpectation(":", false);
  var peg$e11 = peg$literalExpectation("default", false);
  var peg$e12 = peg$literalExpectation("while", false);
  var peg$e13 = peg$literalExpectation(";", false);
  var peg$e14 = peg$literalExpectation("++", false);
  var peg$e15 = peg$literalExpectation("[]", false);
  var peg$e16 = peg$literalExpectation("=", false);
  var peg$e17 = peg$literalExpectation(",", false);
  var peg$e18 = peg$literalExpectation("&&", false);
  var peg$e19 = peg$literalExpectation("||", false);
  var peg$e20 = peg$literalExpectation(">", false);
  var peg$e21 = peg$literalExpectation(">=", false);
  var peg$e22 = peg$literalExpectation("<=", false);
  var peg$e23 = peg$literalExpectation("==", false);
  var peg$e24 = peg$literalExpectation("!=", false);
  var peg$e25 = peg$literalExpectation("<", false);
  var peg$e26 = peg$literalExpectation("+", false);
  var peg$e27 = peg$literalExpectation("-", false);
  var peg$e28 = peg$literalExpectation("*", false);
  var peg$e29 = peg$literalExpectation("/", false);
  var peg$e30 = peg$literalExpectation("int", false);
  var peg$e31 = peg$literalExpectation("float", false);
  var peg$e32 = peg$literalExpectation("string", false);
  var peg$e33 = peg$literalExpectation("boolean", false);
  var peg$e34 = peg$literalExpectation("char", false);
  var peg$e35 = peg$literalExpectation("var", false);
  var peg$e36 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e37 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e38 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e39 = peg$literalExpectation("\"", false);
  var peg$e40 = peg$classExpectation(["\""], true, false);
  var peg$e41 = peg$otherExpectation("whitespace");
  var peg$e42 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$f0 = function(head, tail) {
      // Combina la primera instrucción con el resto
      instructions = [head, ...tail.map(item => item[1])];
      return instructions;
  };
  var peg$f1 = function(vd) {return vd;};
  var peg$f2 = function(va) {return va;};
  var peg$f3 = function(ie) {return ie;};
  var peg$f4 = function(fc) {return fc;};
  var peg$f5 = function(ss) {return ss;};
  var peg$f6 = function(ws) {return ws;};
  var peg$f7 = function(pr) {return pr;};
  var peg$f8 = function(exp) {
    const loc = location()?.start;
    return new Print(loc?.line, loc?.column, exp);
  };
  var peg$f9 = function(condition, then_branch, else_branch) {
      const loc = location()?.start;
      return  new Condition(loc?.line, loc?.column,condition, then_branch, else_branch);
  };
  var peg$f10 = function(else_block) {
      return else_block;
  };
  var peg$f11 = function(exp, cb) {
      const loc = location()?.start;
      return new Switch(loc?.line, loc?.column, exp,cb);
  };
  var peg$f12 = function(caseExpr, caseBody) {
      return { type: "CaseStatement", caseExpr, caseBody };
    };
  var peg$f13 = function(defaultBody) {
      return { type: "DefaultStatement", defaultBody };
    };
  var peg$f14 = function(condition, body) {
      const loc = location()?.start;
      return new Wile(loc?.line, loc?.column, condition, body);
    };
  var peg$f15 = function(statements) {
      return statements;
  };
  var peg$f16 = function(name, value) {
                                              const loc = location()?.start;
                                              return new Assign(loc?.line, loc?.column, name, value);
                                              };
  var peg$f17 = function(type, name, value) {
      const loc = location()?.start;
      return new Declaration(loc?.line, loc?.column, name, type, value, "N");
  };
  var peg$f18 = function(type, varName, elements) {
      return { type: "ArrayDeclaration", varName, elements: elements || [] };
    };
  var peg$f19 = function(value) {return value;};
  var peg$f20 = function() {return null;};
  var peg$f21 = function(name, args) {
      return { type: "function_call", name, args: args || [] };
  };
  var peg$f22 = function(head, tail) {
      return [head, ...tail.map(item => item[3])];
  };
  var peg$f23 = function(be) { return be;};
  var peg$f24 = function(re, be) {
                          const loc = location()?.start;
                          return new Logical(loc?.line, loc?.column, re, be, "&&");
                        };
  var peg$f25 = function(re, be) {
                          const loc = location()?.start;
                          return new Logical(loc?.line, loc?.column, re, be, "&&");
                        };
  var peg$f26 = function(re) {return re;};
  var peg$f27 = function(ae, re) {
                                const loc = location()?.start;
                                return new Relational(loc?.line, loc?.column, ae, re, ">");
                              };
  var peg$f28 = function(ae, re) {
                                const loc = location()?.start;
                                return new Relational(loc?.line, loc?.column, ae, re, ">=");
                              };
  var peg$f29 = function(ae, re) {
                                const loc = location()?.start;
                                return new Relational(loc?.line, loc?.column, ae, re, "<=");
                              };
  var peg$f30 = function(ae, re) {
                                const loc = location()?.start;
                                return new Relational(loc?.line, loc?.column, ae, re, "==");
                              };
  var peg$f31 = function(ae, re) {
                                const loc = location()?.start;
                                return new Relational(loc?.line, loc?.column, ae, re, "!=");
                              };
  var peg$f32 = function(ae, re) {
                                const loc = location()?.start;
                                return new Relational(loc?.line, loc?.column, ae, re, "<");
                              };
  var peg$f33 = function(ae) {return ae;};
  var peg$f34 = function(pe, ae) {
                                const loc = location()?.start;
                                return new Arithmetic(loc?.line, loc?.column, pe, ae, "+");
                              };
  var peg$f35 = function(pe, ae) {
                                const loc = location()?.start;
                                return new Arithmetic(loc?.line, loc?.column, pe, ae, "-");
                              };
  var peg$f36 = function(pe) {return pe;};
  var peg$f37 = function(fac, pe) {
                                const loc = location()?.start;
                                return new Arithmetic(loc?.line, loc?.column, fac, pe, "*");
                              };
  var peg$f38 = function(fac, pe) {
                                const loc = location()?.start;
                                return new Arithmetic(loc?.line, loc?.column, fac, pe, "/");
                              };
  var peg$f39 = function(fac) {return fac;};
  var peg$f40 = function(val) {                                
                  const loc = location()?.start;
                  return new Literal(loc?.line, loc?.column, val, Type.INT);
                };
  var peg$f41 = function(val) {
                    const loc = location()?.start;
                    return new Literal(loc?.line, loc?.column, val, Type.IDENTIFIER);
                    };
  var peg$f42 = function(val) {
                    const loc = location()?.start;
                    return new Literal(loc?.line, loc?.column, val, Type.STRING);

  };
  var peg$f43 = function(be) {return be;};
  var peg$f44 = function() {return text();};
  var peg$f45 = function() { return parseInt(text(), 10); };
  var peg$f46 = function(chars) {
    return text();
  };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parsestatement_list();

    return s0;
  }

  function peg$parsestatement_list() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsestatement();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      s5 = peg$parsestatement();
      if (s5 !== peg$FAILED) {
        s4 = [s4, s5];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        s5 = peg$parsestatement();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f0(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestatement() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsevariable_declaration();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsevariable_assign();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$f2(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseif_else();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f3(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsefunction_call();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f4(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseswitch_statement();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$f5(s1);
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parsewhileStatement();
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$f6(s1);
              }
              s0 = s1;
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parseprint();
                if (s1 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$f7(s1);
                }
                s0 = s1;
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseprint() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 19) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 19;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseexpression();
      if (s2 !== peg$FAILED) {
        if (input.substr(peg$currPos, 2) === peg$c1) {
          s3 = peg$c1;
          peg$currPos += 2;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f8(s2);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseif_else() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 40) {
        s3 = peg$c3;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseexpression();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 41) {
            s7 = peg$c4;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            s9 = peg$parseblock();
            if (s9 !== peg$FAILED) {
              s10 = peg$parse_();
              s11 = peg$parseelse_clause();
              if (s11 === peg$FAILED) {
                s11 = null;
              }
              peg$savedPos = s0;
              s0 = peg$f9(s5, s9, s11);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseelse_clause() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c5) {
      s1 = peg$c5;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseblock();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f10(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseswitch_statement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c6) {
      s1 = peg$c6;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 40) {
        s3 = peg$c3;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseexpression();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 41) {
            s7 = peg$c4;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s7 !== peg$FAILED) {
            s8 = peg$parse_();
            if (input.charCodeAt(peg$currPos) === 123) {
              s9 = peg$c7;
              peg$currPos++;
            } else {
              s9 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e7); }
            }
            if (s9 !== peg$FAILED) {
              s10 = peg$parse_();
              s11 = peg$parsecaseBlock();
              s12 = peg$parse_();
              if (input.charCodeAt(peg$currPos) === 125) {
                s13 = peg$c8;
                peg$currPos++;
              } else {
                s13 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e8); }
              }
              if (s13 !== peg$FAILED) {
                peg$savedPos = s0;
                s0 = peg$f11(s5, s11);
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsecaseBlock() {
    var s0, s1;

    s0 = [];
    s1 = peg$parsecaseStatement();
    if (s1 === peg$FAILED) {
      s1 = peg$parsedefaultStatement();
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parsecaseStatement();
      if (s1 === peg$FAILED) {
        s1 = peg$parsedefaultStatement();
      }
    }

    return s0;
  }

  function peg$parsecaseStatement() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
